<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="ru.quintsoft.shoestore.screens.login.LoginFragment"
        android:label="@string/login_header"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="ru.quintsoft.shoestore.screens.common.WelcomeFragment"
        android:label="@string/welcome_header">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_right"
            app:popExitAnim="@anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="ru.quintsoft.shoestore.screens.common.InstructionFragment"
        android:label="@string/instruction_header">
        <action
            android:id="@+id/action_instructionFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="ru.quintsoft.shoestore.screens.listing.ListFragment"
        android:label="@string/list_header">
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_right"
            app:popExitAnim="@anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="ru.quintsoft.shoestore.screens.detail.DetailFragment"
        android:label="@string/detail_header"
        app:enterAnim="@anim/slide_in_left"
        app:exitAnim="@anim/slide_out_right" />
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:launchSingleTop="true"
        app:popUpTo="@id/main_navigation"
        app:popUpToInclusive="true" />
</navigation>