<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="product"
            type="ru.quintsoft.shoestore.screens.listing.Product" />

        <variable
            name="viewModel"
            type="ru.quintsoft.shoestore.screens.detail.DetailViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/primaryBackground"
        tools:context=".screens.detail.DetailFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_title"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/text_size_large" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_small"
                android:textColor="@color/primaryText">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/primaryEdit"
                    android:text="@={product.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_small"
                android:textColor="@color/primaryText">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_size"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/primaryEdit"
                    android:text="@={product.size}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_small"
                android:textColor="@color/primaryText">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_company"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/primaryEdit"
                    android:text="@={product.company}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_small"
                android:textColor="@color/primaryText">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/primaryEdit"
                    android:text="@={product.description}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonAddShoe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_small"
                android:background="@color/primaryButton"
                android:onClick="@{() -> viewModel.saveData(product)}"
                android:text="@string/label_button_add_product"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryButton"
                android:text="@string/label_button_cancel"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</layout>