<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/primaryBackground"
        tools:context=".screens.common.InstructionFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/instruction_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="layout/instruction_fragment">

            <TextView
                android:id="@+id/instructionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/text_size_large"
                android:textStyle="normal|bold"
                android:text="@string/instruction_title"
                android:textColor="@color/primaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/instructionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_medium"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/instruction_text"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/primaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructionTitle" />

            <Button
                android:id="@+id/buttonList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@color/primaryButton"
                android:text="@string/label_button_view_products"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructionText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>