<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="productItem"
            type="ru.quintsoft.shoestore.screens.listing.Product" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_small"
        android:padding="@dimen/layout_margin_small"
        android:background="@color/primaryItem">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/content_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:maxHeight="@dimen/max_image_height"
            android:maxWidth="@dimen/max_image_width"
            app:srcCompat="@mipmap/adidas" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_small"
            android:text="@{productItem.name}"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name" />

        <TextView
            android:id="@+id/label_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_small"
            android:text="@string/label_product_size"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            tools:text="Size:" />

        <TextView
            android:id="@+id/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_small"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{productItem.size}"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toEndOf="@+id/label_size"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            tools:text="8.0" />

        <TextView
            android:id="@+id/label_made"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_small"
            android:text="@string/label_product_made"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_size"
            tools:text="Producer:" />

        <TextView
            android:id="@+id/text_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_small"
            android:text="@{productItem.company}"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toEndOf="@+id/label_made"
            app:layout_constraintTop_toBottomOf="@+id/text_size"
            tools:text="Company" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_small"
            android:text="@{productItem.description}"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_company"
            tools:text="Description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>